# Apastron

./: .gitignore  README.md
Apastron/: Apastron.cabal  stack.yaml
Apastron/.stack-work/install/1bb99e24/flag-cache/: Apastron-0.1.0.0-6p4Hh7PW7PxHJPhuB7hN0A  DRBG-0.5.5-2YLkh3xI9ieGms0KcnFAxA  RSA-2.2.0-6TfG2Ptp9DG9AgAnhlH8WG  SHA-1.6.4.2-GSP9nhHyWNEAImBrL9QfXp  StateVar-1.1.0.4-CJpWsiXJdd89SnV9dZtTwc  adjunctions-4.3-3ol9sWZt3In19pwXwPv3Xc  aeson-1.0.2.1-IWZLPncKUtsCKiJwRHsVV2  aeson-compat-0.3.6-GGNwrjzrRWDAf6AKSzaJWI  aeson-pretty-0.8.2-IVYa78R1rtCLlIJEesXhT5  base-orphans-0.5.4-5IQvrjd7gNP548VkOOyIq6  base-unicode-symbols-0.2.2.4-EZo0X1xtJYFIOElQArieZo  bcrypt-0.0.10-2ThE5bEr0Qa1eml7xXfRx5  bifunctors-5.4.1-8Xk5Wsnk1fr6rBLkW9MO8p  binary-orphans-0.1.5.1-DPC52mntbhkG4cEV7O2TQl  blaze-textual-0.2.1.0-5TvXaG25I6S46sBk67LFXf  bson-generic-0.0.8-HCUlC9mFzScEiZ90dYsZ4F  bytestring-conversion-0.3.1-IyepBgDx9UqHXzNMstuqFf  charset-0.3.7.1-4lsFvOcM7i5BbmeeHj6Z66  cipher-aes128-0.7.0.3-J3WhzdOFaNHFQFa07hFBHg  comonad-5-2RMxpSOQ5MCHLHIelJrHD4  contravariant-1.4-KSQE31a7FruKHDlp90hIUT  crypto-api-0.13.2-8gIBOo6dlva1NPmSrrm5Js  crypto-pubkey-types-0.4.3-GEJfCplz8oCLfKoAiOZk6l  cryptohash-cryptoapi-0.1.4-4xkB57yZThFH9GxOGGUoU6  data-default-0.7.1.1-5uix4eIzBY9IcVb4V2HbW3  data-default-instances-containers-0.0.1-B3LqdWnlDzL8N7WtQnkQ3T  data-default-instances-dlist-0.0.1-7EnnOuRxBMR4O5lm1rpRqD  data-default-instances-old-locale-0.0.1-LPOHPEJCJUa53W1ZYaHB84  deepseq-generics-0.2.0.0-ESBROgKchbm3QXcQv2e7oG  distributive-0.5.0.2-Cdz2vLOk85j1doGXLcictT  entropy-0.3.7-2Hc694EYwMYZfTTTYJYDd  errors-2.1.3-9dPYnhb3gqE7GWHRoqGMmJ  fast-logger-2.4.10-6kJ2jaZaxREHZQiEeA3Z9T  free-4.12.4-Etm59Dm8iExFxAy1L49Ovd  github-0.15.0-5NmHJJJjiHK3Xno1Auc5DS  hasbolt-0.1.0.9-AJXJGY2ypvLC8K54oQUQlt  http-api-data-0.3.2-A22DPUhAmUlrIoBZ4qkGB  http-link-header-1.0.3-fKy7Q0vE064cd4UDnyGGp  http2-1.6.2-8AbNCX9FS8K1gUe78Emp1g  iso8601-time-0.1.4-CQXtvTAot9eJkkRKHuVCon  (+28 more)
Apastron/.stack-work/install/1bb99e24/pkgdb/: Apastron-0.1.0.0-6p4Hh7PW7PxHJPhuB7hN0A.conf  Apastron-0.1.0.0-CUgDvruW5LhL6gqlMr3eJY.conf  aeson-1.0.2.1-IWZLPncKUtsCKiJwRHsVV2.conf  aeson-compat-0.3.6-GGNwrjzrRWDAf6AKSzaJWI.conf  (+19 more)
Apastron/app/: Main.hs
Apastron/scripts/: api.js
Apastron/src/: Boltery.hs  Common.hs  CommonApi.hs  Crawler.hs  MongoDbConnector.hs  Search.hs
(+279 files in other folders)
