name:                Apastron
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Coggroach/Apastron#readme
license:             BSD3
license-file:        LICENSE
author:              Coggroach
maintainer:          example@example.com
copyright:           2017 Coggroach
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , github
                     , mongoDB
                     , servant == 0.9.*
                     , servant-server
                     , servant-client
                     , aeson
                     , cipher-aes
                     , bcrypt
                     , RSA
                     , DRBG
                     , directory  
                     , warp
                     , wai
                     , transformers
                     , random
                     , wai-logger
                     , wai-cors
                     , mongoDB
                     , hslogger
                     , time
                     , bson-generic
                     , resourcet
                     , text
                     , bytestring
                     , bson
                     , mtl
                     , http-client
                     , process
                     , uuid
                     , split
                     , containers
                     , stm
                     , servant-js
  default-language:    Haskell2010

executable Apastron-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Apastron
  default-language:    Haskell2010

test-suite Apastron-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Apastron
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Coggroach/Apastron
